# cuda_gemm_testing

./: .gitignore  CMakeLists.txt  README.md  plot.py  run.sh  sgemm.cu
devicequery/: A4000.txt
old/: cuBLAS_sgemm.cu  old.sgemm.cu  simplest_kernel.cu
old/src/kernels/: 1_naive_gemm.cuh
src/: kernel.cuh  kernel_run.cu  kernel_run.cuh  kernels.cuh  utils.cu  utils.cuh
src/kernel/: kernel_1.cuh
